Updated AlgebraFeatures and DeltaFeatures with new matching capabilities. Improvements to CollectionFeatures and CollectionProducer, including removing deprecated methods. Introduced CollectionProductComputation to experiment with a more specialized delta implementation for products and added index caching and simplification in AggregatedProducerComputation. Introduced an Expression::simplify implementation that doesn't require a KernelStructureContext argument. Updated CollectionProducerComputationBase to implement DeltaAlternate. Introduced DescribableParent to make it easier to generate String descriptions of Parents based on their children and updated more ProducerComputation implementations to leverage short names. Introduced NumberFormats and eliminated Defaults and DefaultUITheme.